--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -9,6 +9,29 @@
   organization={IEEE}
 }
 
+
+@article{conn1991globally,
+  title={A globally convergent augmented Lagrangian algorithm for optimization with general constraints and simple bounds},
+  author={Conn, Andrew R and Gould, Nicholas IM and Toint, Philippe},
+  journal={SIAM Journal on Numerical Analysis},
+  volume={28},
+  number={2},
+  pages={545--572},
+  year={1991},
+  publisher={SIAM}
+}
+
+@article{birgin2008improving,
+  title={Improving ultimate convergence of an augmented Lagrangian method},
+  author={Birgin, Ernesto G and Mart{\'\i}nez, Jos{\'e} Mario},
+  journal={Optimization Methods and Software},
+  volume={23},
+  number={2},
+  pages={177--195},
+  year={2008},
+  publisher={Taylor \& Francis}
+}
+
 @misc{Parrilo09,
   author        = {Pablo Parrilo},
   title         = {Lecture notes in Algebraic Techniques and Semidefinite Optimization},
